[package]
name = "htmlwatch"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json","cookies"] }
tokio = { version = "1", features = ["full"] }
reqwest_cookie_store = "0.3.0"
cookie_store = "0.16.1"
rusqlite = { version = "0.28.0", features = ["bundled"] }
clap = { version = "3.0", features = ["derive"] }